Avoid horizontal scroll on pre tags

--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -91,3 +91,7 @@ a {
   font-size: 12.8px;
   font-size: 0.8rem;
 }
+
+pre {
+  white-space: pre-wrap;
+}
